kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5000
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: oubelkasfatima/backend:1.0.1
          ports:
            - containerPort: 5000
              name: backend-port
          livenessProbe:
            httpGet:
              port: backend-port
              path: /health
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              port: backend-port
              path: /health
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: backend-port
              path: /ready
            failureThreshold: 1
            periodSeconds: 10
