kubernetes/database.yaml

apiVersion: v1
kind: Service 
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
spec:
  replicas: 2
  serviceName: mongodb
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app:mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongodb-service
          image: mongo:5.0
          ports:
            - containerPort: 27017
              name: db-port
          livenessProbe:
            exec:
              command:
                - echo
                - -e
                - '--eval "db.adminCommand(''ping'')"'
                - \|
                - xargs
                - mongo
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          exec:
            command:
              - echo
              - -e
              - '--eval "db.adminCommand(''ping'')"'
              - \|
              - xargs
              - mongo
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
 volumeClaimTemplates:
  - metadata:
      name: mongo-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
