kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 80
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: oubelkasfatima/frontend:1.0.0
          ports:
            - containerPort: 80
              name: http-port
          livenessProbe:
            httpGet:
              path: /index.html
              port: http-port
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /index.html
              port: http-port
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /index.html
              port: http-port
            failureThreshold: 1
            periodSeconds: 10


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: exam-sud-ine2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
